# ihaskell-pwd

./: .gitignore  LICENSE  LamCalc.ipynb  LambaCalc.ipynb  README.md  build.sh  clean.sh  ihaskell-pwd.cabal  install.sh  run.sh  stack.yaml  stackDOTyaml  wsl2browser.sh
